// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ToggleSwitch /> renders the component as checked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="button-0-3-1"
        type="button"
      >
        <div
          class="check-0-3-2"
        >
          <div
            class="container-0-3-3"
            style="background-color: rgb(0, 0, 0);"
          >
            <div
              class="handle-0-3-4"
              style="background-color: rgb(255, 255, 255); transform: translate(80%);"
            />
          </div>
        </div>
        <div
          class="content-0-3-5"
        >
          <div />
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="button-0-3-1"
      type="button"
    >
      <div
        class="check-0-3-2"
      >
        <div
          class="container-0-3-3"
          style="background-color: rgb(0, 0, 0);"
        >
          <div
            class="handle-0-3-4"
            style="background-color: rgb(255, 255, 255); transform: translate(80%);"
          />
        </div>
      </div>
      <div
        class="content-0-3-5"
      >
        <div />
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ToggleSwitch /> renders the component as unchecked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="button-0-3-1"
        type="button"
      >
        <div
          class="check-0-3-2"
        >
          <div
            class="container-0-3-3"
            style="background-color: rgb(93, 93, 93);"
          >
            <div
              class="handle-0-3-4"
              style="background-color: rgb(255, 255, 255); transform: none;"
            />
          </div>
        </div>
        <div
          class="content-0-3-5"
        >
          <div />
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="button-0-3-1"
      type="button"
    >
      <div
        class="check-0-3-2"
      >
        <div
          class="container-0-3-3"
          style="background-color: rgb(93, 93, 93);"
        >
          <div
            class="handle-0-3-4"
            style="background-color: rgb(255, 255, 255); transform: none;"
          />
        </div>
      </div>
      <div
        class="content-0-3-5"
      >
        <div />
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
